[gd_scene load_steps=31 format=3 uid="uid://dw2w2jxsxhune"]

[ext_resource type="Script" path="res://scenes/Intro.gd" id="1_wll32"]
[ext_resource type="FontFile" uid="uid://cef4gbi7nqx3w" path="res://Fonts/Gen Jyuu Gothic Monospace Heavy.ttf" id="2_6y8dw"]
[ext_resource type="Script" path="res://scripts/setting.gd" id="3_kfn08"]
[ext_resource type="Texture2D" uid="uid://c7ek5yw24hrme" path="res://UI/english.png" id="4_7nxrk"]
[ext_resource type="Texture2D" uid="uid://b0wkyi22ihd6u" path="res://UI/jP.png" id="5_moh31"]
[ext_resource type="Texture2D" uid="uid://d1lemegy2hs7f" path="res://UI/closeBtn.png" id="6_jlgrm"]
[ext_resource type="Texture2D" uid="uid://dx4ynppg1bpxo" path="res://UI/soundOffBtn.png" id="7_ff7en"]
[ext_resource type="Texture2D" uid="uid://6lihqxf3ernf" path="res://UI/soundOnBtn.png" id="8_i8ntx"]
[ext_resource type="Texture2D" uid="uid://k71w56ukwmtg" path="res://UI/settingsBtn.png" id="9_02isb"]
[ext_resource type="Texture2D" uid="uid://dlmt0ef2xieqi" path="res://UI/yellowRectNormal.png" id="10_i8dvk"]
[ext_resource type="FontFile" uid="uid://deigtwdpbmrw6" path="res://Fonts/Itim-Regular.ttf" id="11_8rrk4"]

[sub_resource type="LabelSettings" id="LabelSettings_xwrek"]
font = ExtResource("2_6y8dw")
font_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jlkt7"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6j8rb"]

[sub_resource type="LabelSettings" id="LabelSettings_y71fv"]
font = ExtResource("2_6y8dw")
font_size = 70
font_color = Color(0.318684, 0.164204, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vphh0"]
bg_color = Color(0.957918, 0.80729, 0.61882, 1)
border_color = Color(0.993597, 0.706825, 0.793039, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing_size = 0.01

[sub_resource type="LabelSettings" id="LabelSettings_mxk84"]
font = ExtResource("2_6y8dw")
font_size = 120
font_color = Color(0, 0, 0, 1)
outline_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3s0pt"]
bg_color = Color(1, 0.67451, 0.670588, 0)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vdrf2"]
bg_color = Color(0.6, 0.6, 0.6, 0.588235)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xaff4"]
bg_color = Color(0.6, 0.6, 0.6, 0.368627)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kg7o7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_papbp"]
bg_color = Color(0.886966, 0.545404, 0.599298, 1)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkb13"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k6gie"]
bg_color = Color(0.6, 0.6, 0.6, 0.572549)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7yw7t"]
bg_color = Color(0.6, 0.6, 0.6, 0.388235)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32kwc"]
bg_color = Color(0.909804, 0.360784, 0.721569, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_en5jn"]
bg_color = Color(1, 0.284297, 0.346101, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sk1kp"]
bg_color = Color(0.419221, 0, 0.0829647, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2wnl0"]
bg_color = Color(0.152941, 0.152941, 0.152941, 0.192157)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uetaq"]

[node name="Intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wll32")
conversation = ["Whisker : Hello?", "Police : Hi! Detective. Do you remember Dr.Hootie, an archiologist?", "Whisker : Yes, Why?", "Police : She just fiund dead In her room. Please come to my office as fast as possible.", "Whisker : Roger that!"]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -554.0
offset_top = -270.0
offset_right = 555.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_xwrek")
autowrap_mode = 3

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -554.0
offset_top = -209.0
offset_right = 555.0
offset_bottom = -91.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_xwrek")
autowrap_mode = 3

[node name="Label3" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -554.0
offset_top = -147.0
offset_right = 555.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_xwrek")
autowrap_mode = 3

[node name="Label4" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -554.0
offset_top = -85.0
offset_right = 600.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_xwrek")
autowrap_mode = 3

[node name="Label5" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -554.0
offset_top = -28.0
offset_right = 555.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_xwrek")
autowrap_mode = 3

[node name="PlayButton" type="Button" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 567.0
offset_top = 572.0
offset_right = -460.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.56, 0.56)
theme_override_styles/normal = SubResource("StyleBoxFlat_jlkt7")
theme_override_styles/focus = SubResource("StyleBoxEmpty_6j8rb")

[node name="PlayButtonBG" type="TextureRect" parent="Panel/PlayButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.5
offset_top = -48.5
offset_right = 230.5
offset_bottom = 113.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.71039, 0.611279)
texture = ExtResource("10_i8dvk")

[node name="Label" type="Label" parent="Panel/PlayButton/PlayButtonBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 92.9067
offset_right = -101.093
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("11_8rrk4")
theme_override_font_sizes/font_size = 112
text = "Go"
label_settings = SubResource("LabelSettings_y71fv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingPanel" type="Panel" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_kfn08")

[node name="Panel" type="Panel" parent="Panel/SettingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -314.0
offset_top = -121.0
offset_right = -261.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(11.8067, 6.50019)
theme_override_styles/panel = SubResource("StyleBoxFlat_vphh0")

[node name="LabelLanguage" type="Label" parent="Panel/SettingPanel/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0698755
anchor_top = 0.219224
anchor_right = 0.0698761
anchor_bottom = 0.219224
offset_right = 793.0
offset_bottom = 230.0
scale = Vector2(0.0216527, 0.042399)
text = "Language"
label_settings = SubResource("LabelSettings_mxk84")
metadata/_edit_use_anchors_ = true

[node name="LabelSound" type="Label" parent="Panel/SettingPanel/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0754717
anchor_top = 0.55
anchor_right = 27.7925
anchor_bottom = 4.225
offset_right = 519.0
offset_bottom = 230.0
scale = Vector2(0.0216527, 0.042399)
text = "Volume"
label_settings = SubResource("LabelSettings_mxk84")
metadata/_edit_use_anchors_ = true

[node name="ENButton" type="Button" parent="Panel/SettingPanel/Panel"]
layout_mode = 0
offset_left = 22.0
offset_top = 10.0
offset_right = 35.0
offset_bottom = 17.0
theme_override_styles/normal = SubResource("StyleBoxFlat_3s0pt")
theme_override_styles/hover = SubResource("StyleBoxFlat_vdrf2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xaff4")
theme_override_styles/focus = SubResource("StyleBoxEmpty_kg7o7")

[node name="Panel" type="Panel" parent="Panel/SettingPanel/Panel/ENButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.75725
offset_top = -0.615658
offset_right = -1.75725
offset_bottom = -0.615658
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.15999, 1.15999)
theme_override_styles/panel = SubResource("StyleBoxFlat_papbp")

[node name="ENflag" type="TextureRect" parent="Panel/SettingPanel/Panel/ENButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.255228
anchor_top = 0.48924
anchor_right = 0.25524
anchor_bottom = 0.48924
offset_left = -4.39764
offset_top = -3.27118
offset_right = 1395.61
offset_bottom = 1396.73
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0018773, 0.00339199)
texture = ExtResource("4_7nxrk")

[node name="LabelEN" type="Label" parent="Panel/SettingPanel/Panel/ENButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.400142
anchor_top = 0.223063
anchor_right = 0.400143
anchor_bottom = 0.223063
offset_left = -2.55482
offset_top = -2.1771
offset_right = 499.445
offset_bottom = 447.823
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0216527, 0.042399)
text = "EN"
label_settings = SubResource("LabelSettings_mxk84")
autowrap_mode = 3

[node name="JPButton" type="Button" parent="Panel/SettingPanel/Panel"]
layout_mode = 0
offset_left = 37.267
offset_top = 9.99971
offset_right = 50.267
offset_bottom = 16.9997
theme_override_styles/normal = SubResource("StyleBoxFlat_jkb13")
theme_override_styles/hover = SubResource("StyleBoxFlat_k6gie")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7yw7t")
theme_override_styles/focus = SubResource("StyleBoxFlat_32kwc")

[node name="Panel2" type="Panel" parent="Panel/SettingPanel/Panel/JPButton"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.10107
offset_top = -0.615368
offset_right = -1.10107
offset_bottom = -0.615368
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.15999, 1.15999)
theme_override_styles/panel = SubResource("StyleBoxFlat_papbp")

[node name="LabelJP" type="Label" parent="Panel/SettingPanel/Panel/JPButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.400142
anchor_top = 0.223063
anchor_right = 0.400143
anchor_bottom = 0.223063
offset_left = -1.55984
offset_top = -2.63833
offset_right = 500.44
offset_bottom = 447.362
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0216527, 0.042399)
text = "JP"
label_settings = SubResource("LabelSettings_mxk84")
autowrap_mode = 3

[node name="TextureRect" type="TextureRect" parent="Panel/SettingPanel/Panel/JPButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0846977
anchor_top = 0.175819
anchor_right = 74.1348
anchor_bottom = 138.181
offset_left = -1.18577
offset_top = -0.922759
offset_right = 36.163
offset_bottom = 33.0381
scale = Vector2(0.003, 0.005)
texture = ExtResource("5_moh31")
metadata/_edit_use_anchors_ = true

[node name="CloseButton" type="Button" parent="Panel/SettingPanel/Panel"]
layout_mode = 0
offset_left = 49.6328
offset_top = -2.76915
offset_right = 57.6328
offset_bottom = 5.23085
scale = Vector2(0.567354, 0.96007)
theme_override_styles/normal = SubResource("StyleBoxFlat_en5jn")
theme_override_styles/hover = SubResource("StyleBoxFlat_sk1kp")

[node name="TextureRect" type="TextureRect" parent="Panel/SettingPanel/Panel/CloseButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.23928
offset_top = 1.76264
offset_right = 250.239
offset_bottom = 249.763
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0141601, 0.0141601)
texture = ExtResource("6_jlgrm")

[node name="TextureRect" type="TextureRect" parent="Panel/SettingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = 21.0
offset_right = 182.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.239999, 0.239999)
texture = ExtResource("7_ff7en")

[node name="TextureRect2" type="TextureRect" parent="Panel/SettingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 212.0
offset_top = 21.0
offset_right = 468.0
offset_bottom = 277.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.239999, 0.239999)
texture = ExtResource("8_i8ntx")

[node name="SettingButton" type="Button" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 533.0
offset_top = -334.0
offset_right = 541.0
offset_bottom = -326.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(10.32, 10.32)
theme_override_styles/normal = SubResource("StyleBoxFlat_2wnl0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uetaq")

[node name="Setting" type="TextureRect" parent="Panel/SettingButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 248.0
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0310067, 0.0310067)
texture = ExtResource("9_02isb")

[node name="Camera3D" type="Camera3D" parent="."]

[connection signal="pressed" from="Panel/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Panel/SettingPanel/Panel/ENButton" to="Panel/SettingPanel" method="_on_en_button_pressed"]
[connection signal="pressed" from="Panel/SettingPanel/Panel/JPButton" to="Panel/SettingPanel" method="_on_jp_button_pressed"]
[connection signal="pressed" from="Panel/SettingPanel/Panel/CloseButton" to="Panel/SettingPanel" method="_on_close_button_pressed"]
[connection signal="pressed" from="Panel/SettingButton" to="." method="_on_setting_button_pressed"]
